--- a/src/app/LandingPage/LandingPage.css
+++ b/src/app/LandingPage/LandingPage.css
@@ -5,3 +5,10 @@
 .section-alt {
   background-color: #fafafa;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* prevent horizontal scrollbar */
+  overflow-y: auto;   /* only show scrollbar if needed */
+}
