--- a/src/app/LandingPage/LandingPage.css
+++ b/src/app/LandingPage/LandingPage.css
@@ -11,6 +11,13 @@
   padding-right: 80px;
 }
 
+@media (max-width: 768px) {
+  .landing-page-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 html, body {
   margin: 0;
   padding: 0;
