--- a/src/app/Components/LandingPageComponents/Plans.css
+++ b/src/app/Components/LandingPageComponents/Plans.css
@@ -47,3 +47,8 @@
   transform: translateY(-10px);
 }
 
+@media (max-width: 768px) { /* Mobile */
+  .plan-title {
+    line-height: 1.3 !important;
+  }
+}
