--- a/src/app/Components/LandingPageComponents/MiniCalendar.css
+++ b/src/app/Components/LandingPageComponents/MiniCalendar.css
@@ -342,6 +342,7 @@ h2#fc-dom-86 {
     box-shadow: none !important;
     border: none !important;
     margin: 0 !important;
+    background-color: '#f7f7f9';
     
   }
     .calendly-info {
