--- a/src/app/Components/LandingPageComponents/BusinessProfile.css
+++ b/src/app/Components/LandingPageComponents/BusinessProfile.css
@@ -236,3 +236,11 @@
   );
   z-index: 1;
 }
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
